--- a/Phase2.ipynb
+++ b/Phase2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNGB17IRVIlYq5T5/D9WS2K",
+      "authorship_tag": "ABX9TyN2DapftaqLaA34q1X/HNGu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -176,12 +176,13 @@
         "    print(\"1. The dataset was loaded and an overview was generated.\")\n",
         "    print(\"2. Statistical analysis and visualizations were conducted to understand distributions and relationships.\")\n",
         "    print(\"3. Missing values were handled by replacing numerical values with the median and categorical values with the mode.\")\n",
-        "    print(\"4. Outliers were detected and removed using the Z-score method.\")\n",
-        "    print(\"5. Categorical variables were encoded using Label Encoding.\")\n",
-        "    print(\"6. Numerical features were normalized using Min-Max Scaling.\")\n",
-        "    print(\"7. Discretization was applied to categorize Age, Heart Rate, and Panic Score.\")\n",
-        "    print(\"8. Feature selection was performed using Variance Thresholding to remove low-variance features.\")\n",
-        "    print(\"9. The final processed dataset is now ready for analysis and machine learning applications.\")"
+        "    print(\"4. The ID column was removed as it does not contribute to predictions and can introduce artificial noise.\")\n",
+        "    print(\"5. Outliers were detected and removed using the Z-score method.\")\n",
+        "    print(\"6. Categorical variables were encoded using Label Encoding.\")\n",
+        "    print(\"7. Numerical features were normalized using Min-Max Scaling.\")\n",
+        "    print(\"8. Discretization was applied to categorize Age, Heart Rate, and Panic Score.\")\n",
+        "    print(\"9. Feature selection was performed using Variance Thresholding to remove low-variance features.\")\n",
+        "    print(\"10. The final processed dataset is now ready for analysis and machine learning applications.\")"
       ],
       "metadata": {
         "colab": {
@@ -189,9 +190,9 @@
           "height": 1000
         },
         "id": "7KCoel40BxPr",
-        "outputId": "f9dc7f08-2b1e-4705-a614-bf306a2473c8"
+        "outputId": "b797abcd-635a-455c-ac01-6ceab34d79a5"
       },
-      "execution_count": 5,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -547,12 +548,13 @@
             "1. The dataset was loaded and an overview was generated.\n",
             "2. Statistical analysis and visualizations were conducted to understand distributions and relationships.\n",
             "3. Missing values were handled by replacing numerical values with the median and categorical values with the mode.\n",
-            "4. Outliers were detected and removed using the Z-score method.\n",
-            "5. Categorical variables were encoded using Label Encoding.\n",
-            "6. Numerical features were normalized using Min-Max Scaling.\n",
-            "7. Discretization was applied to categorize Age, Heart Rate, and Panic Score.\n",
-            "8. Feature selection was performed using Variance Thresholding to remove low-variance features.\n",
-            "9. The final processed dataset is now ready for analysis and machine learning applications.\n"
+            "4. The ID column was removed as it does not contribute to predictions and can introduce artificial noise.\n",
+            "5. Outliers were detected and removed using the Z-score method.\n",
+            "6. Categorical variables were encoded using Label Encoding.\n",
+            "7. Numerical features were normalized using Min-Max Scaling.\n",
+            "8. Discretization was applied to categorize Age, Heart Rate, and Panic Score.\n",
+            "9. Feature selection was performed using Variance Thresholding to remove low-variance features.\n",
+            "10. The final processed dataset is now ready for analysis and machine learning applications.\n"
           ]
         }
       ]
