--- a/Phase2.ipynb
+++ b/Phase2.ipynb
@@ -164,6 +164,9 @@
         "    print(\"Dataset after feature selection:\")\n",
         "    print(data.head())\n",
         "\n",
+        "    data.to_csv('processed0_panic_attack_dataset.csv', index=False)\n",
+        "    print(\"Processed dataset saved to '/content/processed_panic_attack_dataset.csv'.\")\n",
+        "\n",
         "    # Step 8: Final Summary\n",
         "    print(\"\\nFinal Processed Dataset Overview\")\n",
         "    print(\"Dataset after all preprocessing steps:\")\n",
